Fix code preview invisibility while overflow

--- a/_sass/kindee/_base.scss
+++ b/_sass/kindee/_base.scss
@@ -3,11 +3,11 @@ html {
 }
 
 body {
-    // background: $background;
-    background:url(/assets/images/background.jpg) repeat;
-    font-family: $font-family;
-    font-size: $font-size;
-    line-height: $line-height;
+  // background: $background;
+  background: url(/assets/images/background.jpg) repeat;
+  font-family: $font-family;
+  font-size: $font-size;
+  line-height: $line-height;
 }
 
 h1,
@@ -16,30 +16,31 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 a {
-    cursor: pointer;
-    color: inherit;
-    text-decoration: none;
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none;
 
-    &:hover {
-      color: blue;
-    }
+  &:hover {
+    color: blue;
+  }
 }
 
 img {
-    max-width: 100%;
-    display: block;
-    margin: 0 auto;
-    padding: 10px 30px;
-    box-sizing: border-box;
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
+  padding: 10px 30px;
+  box-sizing: border-box;
 }
 
 // code snippets
 pre {
   padding: 8px;
-  overflow: hidden;
+  overflow: scroll;
   max-height: 400px;
 }
+
